--- a/index.html
+++ b/index.html
@@ -540,19 +540,19 @@ function adFact(){
 			.style("font", "50px 'stellar'")
 			.style("fill", "black");
 
-	// var button6 = canvas.append("svg:image")
- //        .attr('x', 30)
- //        .attr('y', 300)
- //        .attr('width', 300)
- //        .attr('height', 90)
- //        .attr("xlink:href", "button.png");
+	var button6 = canvas.append("svg:image")
+        .attr('x', 30)
+        .attr('y', 550)
+        .attr('width', 300)
+        .attr('height', 90)
+        .attr("xlink:href", "button.png");
 
- //            canvas.append("text")
- //              .attr("x", 90)//+30
- //              .attr("y", 355)//+55
- //              .text("WHO ARE MY AD'S?")
- //              .style("font", "25px 'stellar'")
- //              .style("fill", "black");
+            canvas.append("text")
+              .attr("x", 90)//+30
+              .attr("y", 605)//+55
+              .text("WAIT, THERE'S MORE?!")
+              .style("font", "25px 'stellar'")
+              .style("fill", "black");
 
 }//end of adFact function 
 
