--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ function adFact(){
 	var button6 = canvas.append("svg:image")
         .attr('x', 30)
         .attr('y', 550)
-        .attr('width', 300)
+        .attr('width', 350)
         .attr('height', 90)
         .attr("xlink:href", "button.png");
 
@@ -553,6 +553,11 @@ function adFact(){
               .text("WAIT, THERE'S MORE?!")
               .style("font", "25px 'stellar'")
               .style("fill", "black");
+
+    	svg.on('click', function() {
+  		//console.log("You clicked")
+		generalVis(); 
+		});
 
 }//end of adFact function 
 
@@ -602,6 +607,58 @@ function statement(){
 		});
 
 }// end of statement function
+
+function generalVis(){
+
+	var fontS = 40; 
+	var spaceF = 20; 
+
+	document.getElementById('status').style.visibility = 'hidden';
+    var rect = canvas.append("rect")
+        .attr("x", 0)
+        .attr("y", 0)
+        .attr("width", width)
+        .attr("height", 1000)
+        .style("fill", "white");
+
+    	var text = canvas.append("text")
+			.attr("x",30)
+			.attr("y", 30)
+			.text("FACEBOOK: ") //$7437 every minute 
+			.style("font", "40px 'stellar'")
+			.style("fill", "black");
+
+    	canvas.append("text")
+			.attr("x",30)
+			.attr("y", 30 + (fontS + spaceF))
+			.text("TWITTER: ") //$7437 every minute 
+			.style("font", "40px 'stellar'")
+			.style("fill", "black");
+
+    	canvas.append("text")
+			.attr("x",30)
+			.attr("y", 30 + (fontS + spaceF)*2)
+			.text("YOUTUBE: ") //$7437 every minute 
+			.style("font", "40px 'stellar'")
+			.style("fill", "black");
+
+    	canvas.append("text")
+			.attr("x",30)
+			.attr("y", 30 + (fontS + spaceF)*3)
+			.text("REDDIT: ") //$7437 every minute 
+			.style("font", "40px 'stellar'")
+			.style("fill", "black");
+
+
+    	canvas.append("text")
+			.attr("x",30)
+			.attr("y", 30 + (fontS + spaceF)*4)
+			.text("Just to give a few examples") //$7437 every minute 
+			.style("font", "20px 'stellar'")
+			.style("fill", "black");
+
+
+}// end of GeneralVis function
 
 //<button class = "button2" id="logout" onclick = "logout()">Logout</button>
 
