--- a/index.html
+++ b/index.html
@@ -666,6 +666,13 @@ function generalVis(){
 			.style("font", "20px 'stellar'")
 			.style("fill", "black");
 
+    	canvas.append("text")
+			.attr("x",30)
+			.attr("y", yP + ((fontS + spaceF)*5) - 30)
+			.text("THANKS FOR COMING ALONG! - IDENTITY 2.0") 
+			.style("font", "20px 'stellar'")
+			.style("fill", "black");
+
 }// end of GeneralVis function
 
 //<button class = "button2" id="logout" onclick = "logout()">Logout</button>
