--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ function generalVis(){
 
     	canvas.append("text")
 			.attr("x",30)
-			.attr("y", yP + ((fontS + spaceF)*5) + (20 + spaceF)
+			.attr("y", yP + ((fontS + spaceF)*5) + (20 + spaceF))
 			.text("THANKS FOR COMING ALONG! - IDENTITY 2.0") 
 			.style("font", "20px 'stellar'")
 			.style("fill", "black");
