--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ function statement(){
 		canvas.append("text")
 			.attr("x",50)
 			.attr("y", 240)
-			.text("from digital ad’s that use your data")
+			.text("from digital ad’s that use our data")
 			.style("font", "40px 'stellar'")
 			.style("fill", "black");
 
