--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ FB.getLoginStatus(function(response) {
   	FB.login(function (response) {
   			if(response.status === 'connected'){
 		document.getElementById('status');
-    newPage();
+    theProfile();
     document.getElementById('login').style.visibility = 'hidden';
     document.getElementById('Wtext').style.visibility = 'hidden';}
 		else if(response.status === 'not_authorized'){
@@ -149,6 +149,9 @@ FB.getLoginStatus(function(response) {
   	});
   }
 
+
+//SCREEN 1 
+//==============================================================
     //banner 
     function banner(){
 
@@ -166,8 +169,9 @@ FB.getLoginStatus(function(response) {
         .style("font", "75px 'stellar'")
         .style("fill", "white");
 
+    }// end of banner function 
 
-    }
+//==============================================================
 
     function newPage(){
 
@@ -177,11 +181,19 @@ FB.getLoginStatus(function(response) {
         .attr("width", width)
         .attr("height", height)
         .style("fill", "white");
-
         theProfile();
-    }
+    }// end of newPage function 
 
+//SCREEN 2 
+//==============================================================
     function theProfile(){
+
+      var rect = canvas.append("rect")
+        .attr("x", 0)
+        .attr("y", 0)
+        .attr("width", width)
+        .attr("height", height)
+        .style("fill", "white");
 
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100)'}, function(response) {
 
@@ -278,31 +290,6 @@ FB.getLoginStatus(function(response) {
         .style("font", "20px 'stellar'")
         .style("fill", "black");
 
-
-      // var rectButton = canvas.append("rect")
-      // 	.attr("x", 0)
-      // 	.attr("y", 830)
-      // 	.attr("width", width)
-      // 	.attr("height", 90)
-      // 	.style("fill", "black"); 
-
-
-      // var button1 = canvas.append("svg:image")
-      //   .attr('x', 50)
-      //   .attr('y', 830)
-      //   .attr('width', 180)
-      //   .attr('height', 90)
-      //   .attr("xlink:href", "button.png");
-        // .on('mouseover', function(){
-        // 	pageLikes()});
-
-        	// canvas.append("text")
-         //      .attr("x", 50)
-         //      .attr("y", 830)
-         //      .text("EXPLORE ---->")
-         //      .style("font", "25px 'stellar'")
-         //      .style("fill", "black");
-
       var button2 = canvas.append("svg:image")
         .attr('x', 50)
         .attr('y', 830)
@@ -317,20 +304,6 @@ FB.getLoginStatus(function(response) {
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-      // var button3 = canvas.append("svg:image")
-      //   .attr('x', 460)
-      //   .attr('y', 830)
-      //   .attr('width', 180)
-      //   .attr('height', 90)
-      //   .attr("xlink:href", "button.png");
-
-      //       canvas.append("text")
-      //         .attr("x", 515)
-      //         .attr("y", 885)
-      //         .text("PHOTOS")
-      //         .style("font", "25px 'stellar'")
-      //         .style("fill", "black");
-
     	svg.on('click', function() {
   		//console.log("You clicked")
 		//pageLikes();
@@ -342,7 +315,63 @@ FB.getLoginStatus(function(response) {
 
     }//end of profile function
 
+//==============================================================
 
+//SCREEN 3
+//==============================================================
+
+function statement(){
+
+	document.getElementById('status').style.visibility = 'hidden';
+    var rect = canvas.append("rect")
+        .attr("x", 0)
+        .attr("y", 0)
+        .attr("width", width)
+        .attr("height", 1000)
+        .style("fill", "white");
+
+    	var text = canvas.append("text")
+			.attr("x",50)
+			.attr("y", 120)
+			.text("Facebook is free for it’s users because it makes money") //$7437 every minute 
+			.style("font", "40px 'stellar'")
+			.style("fill", "black");
+
+		canvas.append("text")
+			.attr("x",50)
+			.attr("y", 240)
+			.text("from digital ad’s that use our data")
+			.style("font", "40px 'stellar'")
+			.style("fill", "black");
+
+
+      var button4 = canvas.append("svg:image")
+        .attr('x', 30)
+        .attr('y', 300)
+        .attr('width', 300)
+        .attr('height', 90)
+        .attr("xlink:href", "button.png");
+
+            canvas.append("text")
+              .attr("x", 90)//+30
+              .attr("y", 355)//+55
+              .text("WHO ARE MY AD'S?")
+              .style("font", "25px 'stellar'")
+              .style("fill", "black");
+
+
+    	svg.on('click', function() {
+  		//console.log("You clicked")
+		pageLikes(); 
+		});
+
+}// end of statement function
+
+//============================================================== 
+
+
+//SCREEN 4
+//==============================================================
 
 function pageLikes(){
 
@@ -432,84 +461,12 @@ for (var i = 0; i < info2.length; i++) {
 		adFact();
 		});
 
-
 }// end of page likes function
 
+//==============================================================
 
-// function loadingAds(){
-
-// 	document.getElementById('status').style.visibility = 'hidden';
-//     var rect = canvas.append("rect")
-//         .attr("x", 0)
-//         .attr("y", 0)
-//         .attr("width", width)
-//         .attr("height", 1000)
-//         .style("fill", "white");
-
-// 	var names = ['ADVERTISERS', '  WHO TARGETS YOU?', '  WHO SEES YOU?', '  WHO TRACKS YOU?', '  WHAT IS YOUR WORTH?'];
-
-// var fontSize = 90; 
-// var spacer= 20; 
-
-// var text = canvas.append("text")
-// 	.attr("x", 50)
-// 	.attr("y", 120)
-// 	.style("font", "90px 'stellar'")
-// 	.text(names[0]); 
-
-// canvas.append("text")
-// 	.attr("x", 80)
-// 	.attr("y", 120 + (spacer + fontSize))
-// 	.style("font", "75px 'stellar'")
-// 	.text(names[1])
-// 	.style("opacity", 0)
-// 	.transition()
-// 	.delay(function(d,i){ return 200*i; }) //controls how many come on the screen
-//  	.duration(3000) //controls how fast is changes opacity
-// 	.style("opacity", 1.0); 
-
-// canvas.append("text")
-// 	.attr("x", 80)
-// 	.attr("y", 120 + (spacer + fontSize)*2)
-// 	.style("font", "75px 'stellar'")
-// 	.text(names[2])
-// 	.style("opacity", 0)
-// 	.transition()
-// 	.delay(function(d,i){ return 200*i; }) //controls how many come on the screen
-//  	.duration(9000) //controls how fast is changes opacity
-// 	.style("opacity", 1.0);  
-
-// canvas.append("text")
-// 	.attr("x", 80)
-// 	.attr("y", 120 + (spacer + fontSize)*3)
-// 	.style("font", "75px 'stellar'")
-// 	.text(names[3])
-// 	.style("opacity", 0)
-// 	.transition()
-// 	.delay(function(d,i){ return 200*i; }) //controls how many come on the screen
-//  	.duration(15000) //controls how fast is changes opacity
-// 	.style("opacity", 1.0);  
-
-// canvas.append("text")
-// 	.attr("x", 80)
-// 	.attr("y", 120 + (spacer + fontSize)*4)
-// 	.style("font", "75px 'stellar'")
-// 	.text(names[4])
-// 	.style("opacity", 0)
-// 	.transition()
-// 	.delay(function(d,i){ return 200*i; }) //controls how many come on the screen
-//  	.duration(21000) //controls how fast is changes opacity
-// 	.style("opacity", 1.0); 
-
-
-//     	svg.on('click', function() {
-//   		//console.log("You clicked")
-// 		pageLikes();
-// 		});
-
-
-// }// end of loadingAds function 
-
+//SCREEN 5
+//==============================================================
 function adFact(){
 
    document.getElementById('status').style.visibility = 'hidden';
@@ -571,52 +528,10 @@ function adFact(){
 
 }//end of adFact function 
 
-function statement(){
+//==============================================================
 
-	document.getElementById('status').style.visibility = 'hidden';
-    var rect = canvas.append("rect")
-        .attr("x", 0)
-        .attr("y", 0)
-        .attr("width", width)
-        .attr("height", 1000)
-        .style("fill", "white");
-
-    	var text = canvas.append("text")
-			.attr("x",50)
-			.attr("y", 120)
-			.text("Facebook is free for it’s users because it makes money") //$7437 every minute 
-			.style("font", "40px 'stellar'")
-			.style("fill", "black");
-
-		canvas.append("text")
-			.attr("x",50)
-			.attr("y", 240)
-			.text("from digital ad’s that use our data")
-			.style("font", "40px 'stellar'")
-			.style("fill", "black");
-
-
-      var button4 = canvas.append("svg:image")
-        .attr('x', 30)
-        .attr('y', 300)
-        .attr('width', 300)
-        .attr('height', 90)
-        .attr("xlink:href", "button.png");
-
-            canvas.append("text")
-              .attr("x", 90)//+30
-              .attr("y", 355)//+55
-              .text("WHO ARE MY AD'S?")
-              .style("font", "25px 'stellar'")
-              .style("fill", "black");
-
-
-    	svg.on('click', function() {
-  		//console.log("You clicked")
-		pageLikes(); 
-		});
-
-}// end of statement function
+//SCREEN 6
+//==============================================================
 
 function generalVis(){
 
@@ -684,6 +599,8 @@ function generalVis(){
 			.style("fill", "black");
 
 }// end of GeneralVis function
+
+//==============================================================
 
 //<button class = "button2" id="logout" onclick = "logout()">Logout</button>
 
