--- a/index.html
+++ b/index.html
@@ -173,17 +173,6 @@ FB.getLoginStatus(function(response) {
 
 //==============================================================
 
-    function newPage(){
-
-      var rect = canvas.append("rect")
-        .attr("x", 0)
-        .attr("y", 0)
-        .attr("width", width)
-        .attr("height", height)
-        .style("fill", "white");
-        theProfile();
-    }// end of newPage function 
-
 //SCREEN 2 
 //==============================================================
     function theProfile(){
@@ -601,6 +590,11 @@ function generalVis(){
 }// end of GeneralVis function
 
 //==============================================================
+
+
+
+// ============= SCREENS FOR FACEBOOK REVIEW =================
+
 
 //<button class = "button2" id="logout" onclick = "logout()">Logout</button>
 
