--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@ for (var i = 0; i < info2.length; i++) {
             canvas.append("text")
               .attr("x", width - 230)//+30
               .attr("y", 75)//+55
-              .text("SHOW ME THE £$")
+              .text("CONTINUE")
               .style("font", "25px 'stellar'")
               .style("fill", "black")
 		      .style("opacity", 0)
