--- a/index.html
+++ b/index.html
@@ -858,6 +858,14 @@ function endVis(){
 }// end of endVis function
 
 
+function fbLogout() {
+        FB.logout(function (response) {
+            //Do what ever you want here when logged out like reloading the page
+            window.location.reload();
+        });
+    }
+
+
 //************************************************************
 // ============= SCREENS FOR FACEBOOK REVIEW =================
 //************************************************************
@@ -870,5 +878,6 @@ function endVis(){
 <p id="Wtext"> Welcome to the exhibition Identity 2.0. By logging into Facebook you give us premission to use your data to generate visulisations. These visulisations will help you explore your digital Identity! </p>
 <div id = "status"></div>
 <button class = "button" id="login" onclick = "login()">Login to Facebook</button>
+<span id="fbLogout" onclick="fbLogout()"><a class="fb_button fb_button_medium"><span class="fb_button_text">Logout</span></a></span>
 </body>
 </html> 
