--- a/index.html
+++ b/index.html
@@ -659,35 +659,35 @@ function generalVis(){
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", (yStart + spacer)*2)
+        .attr("y", (yStart + (spacer*2))
         .text("DATE OF BIRTH:" + " " + response.birthday)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", (yStart + spacer)*3)
+        .attr("y", (yStart + (spacer*3))
         .text("GENDER:" + " " + response.gender)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", (yStart + spacer)*4)
+        .attr("y", (yStart + (spacer*4))
         .text("HOMETOWN:" + " " + response.hometown.name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", (yStart + spacer)*5)
+        .attr("y", (yStart + (spacer*5))
         .text("LOCATION:" + " " + response.location.name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", (yStart + spacer)*6)
+        .attr("y", (yStart + (spacer*6))
         .text("PROFILE PICTURE:")
         .style("font", "30px 'stellar'")
         .style("fill", "black");
@@ -696,14 +696,14 @@ function generalVis(){
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", (yStart + spacer)*8)
+        .attr("y", (yStart + (spacer*8))
         .text("EXPLORE YOUR ONLINE IDENTITY")
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", (yStart + spacer)*7)
+        .attr("y", (yStart + (spacer*7))
         .text("--------------------------------------------------------------------")
         .style("font", "20px 'stellar'")
         .style("fill", "black");
