--- a/index.html
+++ b/index.html
@@ -613,7 +613,12 @@ function generalVis(){
         .attr("height", height)
         .style("fill", "white");
 
-      FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100)'}, function(response) {
+      FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100)'}, function(response) {
+
+
+        console.log(response.tagged_places);
+        console.log(response.tagged_places.name);
+        console.log(response.tagged_places.data.latitude);
 
       var rect = canvas.append("rect")
         .attr("x", 0)
@@ -708,19 +713,19 @@ function generalVis(){
         .style("font", "20px 'stellar'")
         .style("fill", "black");
 
-      var button2 = canvas.append("svg:image")
-        .attr('x', 50)
-        .attr('y', 830)
-        .attr('width', 180)
-        .attr('height', 90)
-        .attr("xlink:href", "button.png");
+      // var button2 = canvas.append("svg:image")
+      //   .attr('x', 50)
+      //   .attr('y', 830)
+      //   .attr('width', 180)
+      //   .attr('height', 90)
+      //   .attr("xlink:href", "button.png");
 
-            canvas.append("text")
-              .attr("x", 80)//+30
-              .attr("y", 885)
-              .text("ADVERTISERS")
-              .style("font", "25px 'stellar'")
-              .style("fill", "black");
+      //       canvas.append("text")
+      //         .attr("x", 80)//+30
+      //         .attr("y", 885)
+      //         .text("ADVERTISERS")
+      //         .style("font", "25px 'stellar'")
+      //         .style("fill", "black");
 
     	svg.on('click', function() {
   		//console.log("You clicked")
