--- a/index.html
+++ b/index.html
@@ -615,9 +615,9 @@ function generalVis(){
 
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100)'}, function(response) {
 
-
+        var taggedInfo = response.tagged_places; 
         console.log(response.tagged_places);
-        console.log(response.tagged_places.name);
+        console.log(taggedInfo.name);
         console.log(response.tagged_places.data.latitude);
 
       var rect = canvas.append("rect")
