--- a/index.html
+++ b/index.html
@@ -620,6 +620,10 @@ function generalVis(){
         console.log(taggedInfo.name);
         console.log(response.tagged_places.data.latitude);
 
+        for (var t = 0; i < taggedInfo.length; t++) {
+         console.log(taggedInfo[t].name); 
+        }
+
       var rect = canvas.append("rect")
         .attr("x", 0)
         .attr("y", 20)
