--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@ function generalVis(){
         console.log(taggedInfo.name);
         console.log(response.tagged_places.data.latitude);
 
-        for (var t = 0; i < taggedInfo.length; t++) {
+        for (var t = 0; t < taggedInfo.length; t++) {
          console.log(taggedInfo[t].name); 
         }
 
