--- a/index.html
+++ b/index.html
@@ -703,19 +703,7 @@ function generalVis(){
 
         document.getElementById('status').innerHTML = "<img class = img src='" + response.picture.data.url + "'>";
 
-      canvas.append("text")
-        .attr("x", 50)
-        .attr("y", (yStart + (spacer*11)))
-        .text("EXPLORE YOUR ONLINE IDENTITY")
-        .style("font", "30px 'stellar'")
-        .style("fill", "black");
-
-      canvas.append("text")
-        .attr("x", 50)
-        .attr("y", (yStart + (spacer*10)))
-        .text("--------------------------------------------------------------------")
-        .style("font", "20px 'stellar'")
-        .style("fill", "black");
+//next Y value needs to be *10 
 
       // var button2 = canvas.append("svg:image")
       //   .attr('x', 50)
