--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@ function generalVis(){
 
         for (var t = 0; t < taggedInfo.length; t++) {
          console.log(taggedInfo[t].name); 
+         console.log(taggedInfo[t].place.name)
         }
 
       var rect = canvas.append("rect")
