--- a/index.html
+++ b/index.html
@@ -613,12 +613,16 @@ function generalVis(){
         .attr("height", height)
         .style("fill", "white");
 
-      FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100)'}, function(response) {
+      FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
         var taggedInfo = response.tagged_places; 
         console.log(response.tagged_places);
         console.log(taggedInfo.name);
         console.log(response.tagged_places.data.latitude);
+        console.log(groups);
+        console.log(television);
+        console.log(friends);
+        console.log(likes); 
 
         for (var t = 0; t < taggedInfo.length; t++) {
          console.log(taggedInfo[t].name); 
