--- a/index.html
+++ b/index.html
@@ -619,10 +619,10 @@ function generalVis(){
         console.log(response.tagged_places);
         console.log(taggedInfo.name);
         console.log(response.tagged_places.data.latitude);
-        console.log(groups);
-        console.log(television);
-        console.log(friends);
-        console.log(likes); 
+        console.log(response.groups);
+        console.log(response.television);
+        console.log(response.friends);
+        console.log(response.likes); 
 
         for (var t = 0; t < taggedInfo.length; t++) {
          console.log(taggedInfo[t].name); 
