--- a/index.html
+++ b/index.html
@@ -616,6 +616,7 @@ function generalVis(){
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
         var taggedInfo = response.tagged_places; 
+        var taggedInfo2 = taggedInfo.place; 
         console.log(response.tagged_places);
         console.log(taggedInfo.name);
         console.log(response.tagged_places.data.latitude);
@@ -625,8 +626,7 @@ function generalVis(){
         console.log(response.likes); 
 
         for (var t = 0; t < taggedInfo.length; t++) {
-         console.log(taggedInfo[t].name); 
-         console.log(taggedInfo[t].place.name)
+         console.log(taggedInfo2[t].name); 
         }
 
       var rect = canvas.append("rect")
