--- a/index.html
+++ b/index.html
@@ -617,15 +617,18 @@ function generalVis(){
 
         var taggedInfo = response.tagged_places; 
         var taggedInfo2 = taggedInfo.place; 
+
         console.log(response.tagged_places);
-        console.log(taggedInfo.name);
-        console.log(response.tagged_places.data.latitude);
+        console.log(taggedInfo2.name);
+        //console.log(response.tagged_places.data.latitude);
+        
         console.log(response.groups);
         console.log(response.television);
         console.log(response.friends);
         console.log(response.likes); 
 
         for (var t = 0; t < taggedInfo.length; t++) {
+          console.log('im here'); 
          console.log(taggedInfo2[t].name); 
         }
 
