--- a/index.html
+++ b/index.html
@@ -616,12 +616,13 @@ function generalVis(){
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
         var taggedInfo = response.tagged_places; 
-        var taggedInfo2 = taggedInfo.place; 
+
+        var t2 = taggedInfo.place; 
 
         console.log(response.tagged_places);
-        console.log(taggedInfo2.name);
+        console.log(t2.name);
         //console.log(response.tagged_places.data.latitude);
-        
+
         console.log(response.groups);
         console.log(response.television);
         console.log(response.friends);
