--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@ function generalVis(){
         var t3 = t2.place;
 
         console.log(response.tagged_places);
-        console.log(t3.name);
+        console.log(t3);
         //console.log(response.tagged_places.data.latitude);
 
         console.log(response.groups);
