--- a/index.html
+++ b/index.html
@@ -615,13 +615,13 @@ function generalVis(){
 
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
-        var taggedInfo = response.tagged_places; 
+        // var taggedInfo = response.tagged_places; 
 
-        var t2 = taggedInfo.data; 
-        var t3 = t2.place;
+        // var t2 = taggedInfo.data; 
+        // var t3 = t2.place;
 
-        console.log(response.tagged_places);
-        console.log(t3);
+        // console.log(response.tagged_places);
+        // console.log(t3.name);
         //console.log(response.tagged_places.data.latitude);
 
         console.log(response.groups);
@@ -632,7 +632,7 @@ function generalVis(){
         for (var t = 0; t < taggedInfo.length; t++) {
           console.log('im here'); 
          console.log(t3[t].name); 
-        
+        }
 
       var rect = canvas.append("rect")
         .attr("x", 0)
@@ -728,7 +728,7 @@ function generalVis(){
       //         .text("ADVERTISERS")
       //         .style("font", "25px 'stellar'")
       //         .style("fill", "black");
-}
+
     	svg.on('click', function() {
   		//console.log("You clicked")
       endVis(); 
