--- a/index.html
+++ b/index.html
@@ -629,10 +629,10 @@ function generalVis(){
         console.log(response.friends);
         console.log(response.likes); 
 
-        for (var t = 0; t < taggedInfo.length; t++) {
-          console.log('im here'); 
-         console.log(t3[t].name); 
-        }
+        // for (var t = 0; t < taggedInfo.length; t++) {
+        //   console.log('im here'); 
+        //  console.log(t3[t].name); 
+        // }
 
       var rect = canvas.append("rect")
         .attr("x", 0)
