--- a/index.html
+++ b/index.html
@@ -639,6 +639,8 @@ function generalVis(){
 
         for (var g = 0; g < groupInfo2.length; g++) {
           console.log(groupInfo);
+          console.log(groupInfo2);
+                    console.log(groupInfo[1].name);
           console.log(groupInfo[g].name);
         }
 
