--- a/index.html
+++ b/index.html
@@ -637,10 +637,10 @@ function generalVis(){
         var groupInfo = response.groups;  
         var groupInfo2 = groupInfo.data; 
 
-        for (var g = 0; g < groupInfo2.length; g++) {
+        for (var i = 0; i < groupInfo2.length; i++) {
           console.log(groupInfo);
           console.log(groupInfo2);
-          console.log(groupInfo[1].name);
+          console.log(groupInfo[i].name);
           //console.log(groupInfo[g].name);
         }
 
