--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@ function generalVis(){
         var groupInfo = response.groups;  
         var groupInfo2 = groupInfo.data; 
 
-        for (var i = 0; i < groupInfo2.length; i++) {
+        for (var i = 0; i > groupInfo2.length; i++) {
           console.log(groupInfo);
           console.log(groupInfo2);
           console.log(groupInfo[i].name);
