--- a/index.html
+++ b/index.html
@@ -638,8 +638,8 @@ function generalVis(){
         var groupInfo2 = groupInfo.data; 
 
         for (var i = 0; i < groupInfo2.length; i++) {
-          console.log(groupInfo);
-          console.log(groupInfo2);
+          //console.log(groupInfo);
+          //console.log(groupInfo2);
           console.log(groupInfo2[i].name);
           //console.log(groupInfo[g].name);
         }
