--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@ function generalVis(){
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", (yStart + (spacer*10))*yG)
+        .attr("y", (yStart + (spacer*11))+(yG*20))
         .text(groupInfo2[i].name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
