--- a/index.html
+++ b/index.html
@@ -615,23 +615,16 @@ function generalVis(){
 
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
-        // var taggedInfo = response.tagged_places; 
+        var televisionInfo = response.television; 
+        console.log(televisionInfo);  
+        
+        // var groupInfo2 = groupInfo.data; 
+        // var yG = 1; 
 
-        // var t2 = taggedInfo.data; 
-        // var t3 = t2.place;
-
-        // console.log(response.tagged_places);
-        // console.log(t3.name);
-        //console.log(response.tagged_places.data.latitude);
-
-        // console.log(response.groups);
-        // console.log(response.television);
-        // console.log(response.friends);
-        // console.log(response.likes); 
-
-        // for (var t = 0; t < taggedInfo.length; t++) {
-        //   console.log('im here'); 
-        //  console.log(t3[t].name); 
+        // for (var i = 0; i < groupInfo2.length; i++) {
+        //   //console.log(groupInfo);
+        //   //console.log(groupInfo2);
+        //   console.log(groupInfo2[i].name);
         // }
 
       var rect = canvas.append("rect")
@@ -739,8 +732,6 @@ function generalVis(){
         .text(groupInfo2[i].name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
-
-
  
         }
 
