--- a/index.html
+++ b/index.html
@@ -615,17 +615,17 @@ function generalVis(){
 
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
-        var televisionInfo = response.television; 
+        var teleInfo = response.television; 
         console.log(televisionInfo);  
         
-        // var groupInfo2 = groupInfo.data; 
+        var teleInfo2 = teleInfo.data; 
         // var yG = 1; 
 
-        // for (var i = 0; i < groupInfo2.length; i++) {
-        //   //console.log(groupInfo);
-        //   //console.log(groupInfo2);
-        //   console.log(groupInfo2[i].name);
-        // }
+        for (var t = 0; t < teleInfo2.length; t++) {
+          //console.log(groupInfo);
+          //console.log(groupInfo2);
+          console.log(teleInfo2[t].name);
+        }
 
       var rect = canvas.append("rect")
         .attr("x", 0)
@@ -721,9 +721,7 @@ function generalVis(){
         var yG = 1; 
 
         for (var i = 0; i < groupInfo2.length; i++) {
-          //console.log(groupInfo);
-          //console.log(groupInfo2);
-          console.log(groupInfo2[i].name);
+          //console.log(groupInfo2[i].name);
           yG++; 
 
       canvas.append("text")
