--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@ function generalVis(){
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
         var teleInfo = response.television; 
-        console.log(televisionInfo);  
+        console.log(teleInfo);  
         
         var teleInfo2 = teleInfo.data; 
         // var yG = 1; 
