--- a/index.html
+++ b/index.html
@@ -615,17 +615,7 @@ function generalVis(){
 
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
-        var teleInfo = response.television; 
-        console.log(teleInfo);  
-        
-        var teleInfo2 = teleInfo.data; 
-        // var yG = 1; 
 
-        for (var t = 0; t < teleInfo2.length; t++) {
-          //console.log(groupInfo);
-          //console.log(groupInfo2);
-          console.log(teleInfo2[t].name);
-        }
 
       var rect = canvas.append("rect")
         .attr("x", 0)
@@ -725,12 +715,32 @@ function generalVis(){
           yG++; 
 
       canvas.append("text")
-        .attr("x", 50)
+        .attr("x", 100)
         .attr("y", (yStart + (spacer*10))+(yG*50))
         .text(groupInfo2[i].name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
+        console.log(yG); 
  
+        }
+
+      canvas.append("text")
+        .attr("x", 50)
+        .attr("y", (yStart + (spacer*20)))
+        .text("YOU WATCH: ")
+        .style("font", "30px 'stellar'")
+        .style("fill", "black");
+
+        var teleInfo = response.television; 
+        console.log(teleInfo);  
+        
+        var teleInfo2 = teleInfo.data; 
+        // var yG = 1; 
+
+        for (var t = 0; t < teleInfo2.length; t++) {
+          //console.log(groupInfo);
+          //console.log(groupInfo2);
+          console.log(teleInfo2[t].name);
         }
 
 
