--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@ function generalVis(){
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", (yStart + (spacer*20)))
+        .attr("y", (yStart + (spacer*38)))//needs to calculate space that was taken up above
         .text("YOU WATCH: ")
         .style("font", "30px 'stellar'")
         .style("fill", "black");
