--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@ function generalVis(){
       canvas.append("text")
         .attr("x", 100)
         .attr("y", (yStart + (spacer*35))+(yG*50))
-        .text(groupInfo2[i].name)
+        .text(groupInfo2[t].name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
         }//end of for loop for tv api
