--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ function generalVis(){
 
       canvas.append("text")
         .attr("x", 100)
-        .attr("y", (yStart + (spacer*35))+(yG*50))
+        .attr("y", (yStart + (spacer*35))+(yT*50))
         .text(teleInfo2[t].name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
