--- a/index.html
+++ b/index.html
@@ -616,6 +616,17 @@ function generalVis(){
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
 
+        console.log(response.pageLikes); 
+        // var teleInfo = response.television; 
+        // console.log(teleInfo);   
+        // var teleInfo2 = teleInfo.data; 
+        // //var yT = 1; 
+
+        // for (var t = 0; t < teleInfo2.length; t++) {
+        //   console.log(teleInfo2[t].name);
+        // }
+
+
 
       var rect = canvas.append("rect")
         .attr("x", 0)
@@ -634,7 +645,7 @@ function generalVis(){
       canvas.append("text")
         .attr("x", 50)
         .attr("y", 180)
-        .text("YOUR PROFILE")
+        .text("YOUR DATA PROFILE")
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
