--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@ FB.getLoginStatus(function(response) {
 //   		//console.log("You clicked")
 // 		//pageLikes();
 // 		//loadingAds(); 
+
+
+
+
 // 		statement();
 // 		});
 
@@ -616,7 +620,7 @@ function generalVis(){
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
 
-        console.log(response.pageLikes); 
+        console.log(response.likes); 
         // var teleInfo = response.television; 
         // console.log(teleInfo);   
         // var teleInfo2 = teleInfo.data; 
