--- a/index.html
+++ b/index.html
@@ -619,16 +619,14 @@ function generalVis(){
 
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
-
-        console.log(response.likes); 
-        // var teleInfo = response.television; 
-        // console.log(teleInfo);   
-        // var teleInfo2 = teleInfo.data; 
+   
+        var likesInfo = response.likes;   
+        var likesInfo2 = likesInfo.data; 
         // //var yT = 1; 
 
-        // for (var t = 0; t < teleInfo2.length; t++) {
-        //   console.log(teleInfo2[t].name);
-        // }
+        for (var l = 0; l < teleInfo2.length; l++) {
+          console.log(likesInfo2[l].name);
+        }
 
 
 
@@ -744,13 +742,12 @@ function generalVis(){
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
-        var teleInfo = response.television; 
-        console.log(teleInfo);   
+        var teleInfo = response.television;    
         var teleInfo2 = teleInfo.data; 
         var yT = 1; 
 
         for (var t = 0; t < teleInfo2.length; t++) {
-          console.log(teleInfo2[t].name);
+          //console.log(teleInfo2[t].name);
           yT++;
 
       canvas.append("text")
