--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ function generalVis(){
         var likesInfo2 = likesInfo.data; 
         // //var yT = 1; 
 
-        for (var l = 0; l < teleInfo2.length; l++) {
+        for (var l = 0; l < likesInfo2.length; l++) {
           console.log(likesInfo2[l].name);
         }
 
