--- a/index.html
+++ b/index.html
@@ -756,6 +756,7 @@ function generalVis(){
         .text(teleInfo2[t].name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
+        console.log(yT);
         }//end of for loop for tv api
 
 
