--- a/index.html
+++ b/index.html
@@ -759,6 +759,13 @@ function generalVis(){
         console.log(yT);
         }//end of for loop for tv api
 
+      canvas.append("text")
+        .attr("x", 50)
+        .attr("y", (yStart + (spacer*80)))//needs to calculate space that was taken up above
+        .text("YOU LIKED: ")
+        .style("font", "30px 'stellar'")
+        .style("fill", "black");
+
 
       // var button2 = canvas.append("svg:image")
       //   .attr('x', 50)
