--- a/index.html
+++ b/index.html
@@ -756,12 +756,12 @@ function generalVis(){
         .text(teleInfo2[t].name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
-        console.log(yT);
+        //console.log(yT);
         }//end of for loop for tv api
 
       canvas.append("text")
         .attr("x", 50)
-        .attr("y", (yStart + (spacer*78)))//needs to calculate space that was taken up above
+        .attr("y", (yStart + (spacer*77)))//needs to calculate space that was taken up above
         .text("YOU LIKED: ")
         .style("font", "30px 'stellar'")
         .style("fill", "black");
