--- a/index.html
+++ b/index.html
@@ -620,15 +620,6 @@ function generalVis(){
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
    
-        var likesInfo = response.likes;   
-        var likesInfo2 = likesInfo.data; 
-        // //var yT = 1; 
-
-        for (var l = 0; l < likesInfo2.length; l++) {
-          console.log(likesInfo2[l].name);
-        }
-
-
 
       var rect = canvas.append("rect")
         .attr("x", 0)
@@ -765,6 +756,23 @@ function generalVis(){
         .text("YOU LIKED: ")
         .style("font", "30px 'stellar'")
         .style("fill", "black");
+
+        var likesInfo = response.likes;   
+        var likesInfo2 = likesInfo.data; 
+        var yL = 1; 
+
+        for (var l = 0; l < likesInfo2.length; l++) {
+          yL++; 
+
+      canvas.append("text")
+        .attr("x", 100)
+        .attr("y", (yStart + (spacer*77))+(yL*50))
+        .text(likesInfo2[l].name)
+        .style("font", "30px 'stellar'")
+        .style("fill", "black");
+        //console.log(likesInfo2[l].name);
+        }//end of for loop for likes api 
+
 
 
       // var button2 = canvas.append("svg:image")
