--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     // create our canvas
     var canvas = d3.select("body").append("svg")
       .attr("width", width)
-      .attr("height", 5000);
+      .attr("height", 10000); //how can I adjust this to be adjustable to someones data  
 
 
 banner();
