--- a/index.html
+++ b/index.html
@@ -677,12 +677,12 @@ function generalVis(){
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
-      canvas.append("text")
-        .attr("x", 50)
-        .attr("y", (yStart + (spacer*4)))
-        .text("HOMETOWN:" + " " + response.hometown.name)
-        .style("font", "30px 'stellar'")
-        .style("fill", "black");
+      // canvas.append("text")
+      //   .attr("x", 50)
+      //   .attr("y", (yStart + (spacer*4)))
+      //   .text("HOMETOWN:" + " " + response.hometown.name)
+      //   .style("font", "30px 'stellar'")
+      //   .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
