--- a/index.html
+++ b/index.html
@@ -677,20 +677,20 @@ function generalVis(){
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
-     // var homeInfo = response.hometown; 
-     //  canvas.append("text")
-     //    .attr("x", 50)
-     //    .attr("y", (yStart + (spacer*4)))
-     //    .text("HOMETOWN:" + " " + homeInfo.name)
-     //    .style("font", "30px 'stellar'")
-     //    .style("fill", "black");
+     var homeInfo = response.hometown; 
+      canvas.append("text")
+        .attr("x", 50)
+        .attr("y", (yStart + (spacer*4)))
+        .text("HOMETOWN:" + " " + homeInfo.name)
+        .style("font", "30px 'stellar'")
+        .style("fill", "black");
 
-     //  canvas.append("text")
-     //    .attr("x", 50)
-     //    .attr("y", (yStart + (spacer*5)))
-     //    .text("LOCATION:" + " " + response.location.name)
-     //    .style("font", "30px 'stellar'")
-     //    .style("fill", "black");
+      canvas.append("text")
+        .attr("x", 50)
+        .attr("y", (yStart + (spacer*5)))
+        .text("LOCATION:" + " " + response.location.name)
+        .style("font", "30px 'stellar'")
+        .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 50)
