--- a/index.html
+++ b/index.html
@@ -619,6 +619,16 @@ function generalVis(){
 
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
+        console.log(response.tagged_places);
+        
+        // var likesInfo = response.likes;   
+        // var likesInfo2 = likesInfo.data; 
+        // //var yL = 1; 
+
+        // for (var l = 0; l < likesInfo2.length; l++) {
+        //   //yL++; 
+        // console.log(likesInfo2[l].name);
+        // }//end of for loop for likes api 
    
 
       var rect = canvas.append("rect")
@@ -754,7 +764,7 @@ function generalVis(){
       canvas.append("text")
         .attr("x", 50)
         .attr("y", (yStart + (spacer*77)))//needs to calculate space that was taken up above
-        .text("YOU LIKED: ")
+        .text("YOU LIKE: ")
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
