--- a/index.html
+++ b/index.html
@@ -620,6 +620,9 @@ function generalVis(){
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
         console.log(response.tagged_places);
+
+        var tagInfo = response.tagged_places; 
+        console.log(tagInfo.data); 
         
         // var likesInfo = response.likes;   
         // var likesInfo2 = likesInfo.data; 
