--- a/index.html
+++ b/index.html
@@ -619,19 +619,20 @@ function generalVis(){
 
       FB.api('/me', 'GET', {fields: 'name,id,gender,hometown,birthday,location,picture.width(100).height(100),tagged_places.limit(100),groups.limit(100),television.limit(100),friends.limit(100),likes.limit(100)'}, function(response) {
 
-        console.log(response.tagged_places);
+        //console.log(response.tagged_places);
 
         var tagInfo = response.tagged_places; 
-        console.log(tagInfo.data); 
-        
+        //console.log(tagInfo.data); 
+        var tagInfo2 = tagInfo.data; 
+
         // var likesInfo = response.likes;   
         // var likesInfo2 = likesInfo.data; 
         // //var yL = 1; 
 
-        // for (var l = 0; l < likesInfo2.length; l++) {
-        //   //yL++; 
-        // console.log(likesInfo2[l].name);
-        // }//end of for loop for likes api 
+        for (var tP = 0; tP < tagInfo2.length; tP++) {
+          //yL++; 
+        console.log(tagInfo2[tP].place);
+        }//end of for loop for likes api 
    
 
       var rect = canvas.append("rect")
