--- a/index.html
+++ b/index.html
@@ -631,7 +631,9 @@ function generalVis(){
 
         for (var tP = 0; tP < tagInfo2.length; tP++) {
           //yL++; 
-        console.log(tagInfo2[tP].place);
+          var tagInfo3 = tagInfo2[tP].place; 
+
+        console.log(tagInfo3.name);
         }//end of for loop for likes api 
    
 
