--- a/index.html
+++ b/index.html
@@ -632,8 +632,9 @@ function generalVis(){
         for (var tP = 0; tP < tagInfo2.length; tP++) {
           //yL++; 
           var tagInfo3 = tagInfo2[tP].place; 
+          console.log(tagInfo3); 
 
-        console.log(tagInfo3.name);
+        console.log(tagInfo3.name + tagInfo3.longitude);
         }//end of for loop for likes api 
    
 
