--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ function generalVis(){
           var tagInfo3 = tagInfo2[tP].place; 
           console.log(tagInfo3); 
 
-        console.log(tagInfo3.name + tagInfo3.longitude);
+        console.log(tagInfo3.name + tagInfo3.location.longitude);
         }//end of for loop for likes api 
    
 
