--- a/index.html
+++ b/index.html
@@ -791,12 +791,19 @@ function generalVis(){
     // console.log(tagInfo3); 
     // console.log(tagInfo3.name + ' ' + tagInfo3.location.longitude + ' ' +  tagInfo3.location.latitude);
 
-      // canvas.append("text")
-      //   .attr("x", 100)
-      //   .attr("y", (yStart + (spacer*77))+(yL*50))
-      //   .text(tagInfo3[tP].name)
-      //   .style("font", "30px 'stellar'")
-      //   .style("fill", "black");
+      canvas.append("text")
+        .attr("x", 100)
+        .attr("y", (yStart + (spacer*180))+(ytP*50))
+        .text(tagInfo3[tP].name)
+        .style("font", "30px 'stellar'")
+        .style("fill", "black");
+
+      canvas.append("text")
+        .attr("x", 100)
+        .attr("y", (yStart + (spacer*180))+(ytP*30))
+        .text(tagInfo3[tP].location.longitude)
+        .style("font", "20px 'stellar'")
+        .style("fill", "black");
 
         }//end of for loop for tagged places
 
