--- a/index.html
+++ b/index.html
@@ -793,16 +793,16 @@ function generalVis(){
 
       canvas.append("text")
         .attr("x", 100)
-        .attr("y", (yStart + (spacer*180))+(ytP*50))
+        .attr("y", (yStart + (spacer*180))+(yTP*50))
         .text(tagInfo3[tP].name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
       canvas.append("text")
         .attr("x", 100)
-        .attr("y", (yStart + (spacer*180))+(ytP*30))
+        .attr("y", (yStart + (spacer*180))+(yTP*50)+10)
         .text(tagInfo3[tP].location.longitude)
-        .style("font", "20px 'stellar'")
+        .style("font", "10px 'stellar'")
         .style("fill", "black");
 
         }//end of for loop for tagged places
