--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@ function generalVis(){
       canvas.append("text")
         .attr("x", 100)
         .attr("y", (yStart + (spacer*180))+(yTP*50)+10)
-        .text(tagInfo3.location.longitude)
-        .style("font", "20px 'stellar'")
+        .text("LONGITUDE: " + tagInfo3.location.longitude)
+        .style("font", "10px 'stellar'")
         .style("fill", "black");
 
         }//end of for loop for tagged places
