--- a/index.html
+++ b/index.html
@@ -793,17 +793,17 @@ function generalVis(){
 
       canvas.append("text")
         .attr("x", 100)
-        .attr("y", (yStart + (spacer*180))+(yTP*50))
+        .attr("y", (yStart + (spacer*170))+(yTP*80))
         .text(tagInfo3.name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
-      canvas.append("text")
-        .attr("x", 100)
-        .attr("y", (yStart + (spacer*180))+(yTP*50)+20)
-        .text("LONGITUDE: " + tagInfo3.location.longitude)
-        .style("font", "10px 'stellar'")
-        .style("fill", "black");
+      // canvas.append("text")
+      //   .attr("x", 100)
+      //   .attr("y", (yStart + (spacer*180))+(yTP*50)+20)
+      //   .text("LONGITUDE: " + tagInfo3.location.longitude)
+      //   .style("font", "10px 'stellar'")
+      //   .style("fill", "black");
 
         }//end of for loop for tagged places
 
