--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ console.log(response.friends);
       //   .style("font", "30px 'stellar'")
       //   .style("fill", "black");
       //   //console.log(yL);
-        }//end of for loop for likes api
+        //}//end of for loop for likes api
 
 
    
