--- a/index.html
+++ b/index.html
@@ -621,6 +621,8 @@ function generalVis(){
 console.log(response.friends);
 var friendsInfo = response.friends;
 console.log(friendsInfo.summary); 
+var friendsInfo2 = friendsInfo.summary;
+console.log(friendsInfo2.total_count); 
       // var likesInfo = response.likes;   
       // var likesInfo2 = likesInfo.data; 
       // var yL = 1; 
